<resources>
    <string name="app_name">to do List</string>
    <string name="tarefas">Tarefas</string>
    <string name="text_input_title">Título</string>
    <string name="text_input_description">Descrição</string>
    <string name="task_date">Data</string>
    <string name="task_time">Hora</string>
    <string name="create_task_button">Criar Tarefa</string>
    <string name="task_cancel">Cancelar</string>
    <string name="new_task_description">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\n nenhuma tarefa</string>
</resources>